@@ -4,6 +4,7 @@ ALPHA DEMONSTRATION ADMINISTRATOR MODULE=Alpha Demonstration Administrator Modul
 
 # Description
 ADMIN ALPHA=Administrator Alpha Example Module
+MOD_ALPHA=mod_alpha
 
 # Param Strings
 OPTION=Option
