@@ -1,0 +1,13 @@
+# Site Module Language File
+# Code Strings
+ALPHA DEMONSTRATION SITE MODULE=Alpha Demonstration SITE Module
+
+# Description
+SITE ALPHA=Site Alpha Example Module
+MOD_ALPHA=mod_alpha
+
+# Param Strings
+OPTION=Option
+OPTIONDESC=Description of Option
+OPTION A=Option A
+OPTION B=Option B
