@@ -1,0 +1,2 @@
+# Site Module Install Language File
+SITE ALPHA=Site Alpha Example Module
