@@ -1,0 +1,21 @@
+<?php
+/**
+ * Document Description
+ * 
+ * Document Long Description 
+ * 
+ * PHP4/5
+ *  
+ * Created on Jul 14, 2008
+ * 
+ * @package package_name
+ * @author Your Name <author@toowoombarc.qld.gov.au>
+ * @author Toowoomba Regional Council Information Management Branch
+ * @license GNU/GPL http://www.gnu.org/licenses/gpl.html
+ * @copyright 2008 Toowoomba Regional Council/Developer Name 
+ * @version SVN: $Id:$
+ * @see http://joomlacode.org/gf/project/   JoomlaCode Project:    
+ */
+ 
+echo '<p>'. JText::_('Alpha Demonstration Administrator Module') .'</p>'; 
+?>
