@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<extension type="module" version="1.6" client="administrator" method="upgrade">
-        <name>Admin Alpha</name>
+<extension type="module" version="1.6" client="site" method="upgrade">
+		<!-- Note: Site is the default if client is not specified -->
+        <name>Site Alpha</name>
 		<author>John Doe</author>
 		<authorEmail>john.doe@example.org</authorEmail>
 		<authorUrl>http://www.example.org</authorUrl>
 		<copyright>(C) 2008 Copyright Info</copyright>
 		<license>License Info</license>
 		<version>1.6</version>	
-		<description>Admin Alpha</description>
+		<description>Site Alpha</description>
         <files>
-                <filename module="mod_adminalpha">mod_adminalpha.php</filename>
+                <filename module="mod_alpha">mod_alpha.php</filename>
         </files>
 		<languages>
-			<language tag="en-GB">en-GB.mod_adminalpha.ini</language>
+			<language tag="en-GB">en-GB.mod_alpha.ini</language>
 		</languages>
         <params group="advanced">
                 <param name="option" type="list" default="1" label="Option" description="OPTIONDESC">
