@@ -15,8 +15,11 @@ $ -> Language fix or change
 ! -> Note
 
 
+15-Jul-2008 Sam Moffatt
+ + Added site module
+ ^ Finished admin module
 
-14-July-2008 Sam Moffatt
+14-Jul-2008 Sam Moffatt
  + Started work on admin modules
  ^ Improved com_alpha to support new language support in installer
  ^ Changed SQL files to be more tolerant
